# mini-plm

./: Cargo.toml  README.md
data/: plm.json
src/: cli.rs  main.rs  web.rs
src/core/: change.rs  errors.rs  lifecycle.rs  mod.rs  part.rs  repo.rs
src/data/: plm.json
src/infra/: json_repo.rs  mod.rs
